# AsyncChat

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  app.py  database.py  models.py  settings.py
app/api/: rest.py  socket.py
app/client/: __main__.py  app.py  socket.py  utils.py
app/service/: crud.py  socket.py
tests/: conftest.py  test_api_rest.py  test_client_app.py  test_client_socket.py  test_client_utils.py  test_fastapi_client.py  test_service_crud.py  test_service_socket.py
